CREATE TABLE public.roles (
	id int8 GENERATED BY DEFAULT AS IDENTITY( INCREMENT BY 1 MINVALUE 1 MAXVALUE 9223372036854775807 START 1 CACHE 1 NO CYCLE) NOT NULL,
	created_at timestamptz(6) NOT NULL,
	updated_at timestamptz(6) NULL,
	"version" int8 NULL,
	"name" varchar(50) NOT NULL,
	CONSTRAINT roles_pkey PRIMARY KEY (id),
	CONSTRAINT ukofx66keruapi6vyqpv6f2or37 UNIQUE (name)
);

CREATE TABLE public.users (
	id int8 GENERATED BY DEFAULT AS IDENTITY( INCREMENT BY 1 MINVALUE 1 MAXVALUE 9223372036854775807 START 1 CACHE 1 NO CYCLE) NOT NULL,
	created_at timestamptz(6) NOT NULL,
	updated_at timestamptz(6) NULL,
	"version" int8 NULL,
	email varchar(255) NOT NULL,
	password_hash varchar(255) NOT NULL,
	username varchar(50) NOT NULL,
	CONSTRAINT uk6dotkott2kjsp8vw4d0m25fb7 UNIQUE (email),
	CONSTRAINT ukr43af9ap4edm43mmtq01oddj6 UNIQUE (username),
	CONSTRAINT users_pkey PRIMARY KEY (id)
);

CREATE TABLE public.user_roles (
	user_id int8 NOT NULL,
	role_id int8 NOT NULL,
	CONSTRAINT user_roles_pkey PRIMARY KEY (user_id, role_id)
);


-- public.user_roles foreign keys

ALTER TABLE public.user_roles ADD CONSTRAINT fkh8ciramu9cc9q3qcqiv4ue8a6 FOREIGN KEY (role_id) REFERENCES public.roles(id);
ALTER TABLE public.user_roles ADD CONSTRAINT fkhfh9dx7w3ubf1co1vdev94g3f FOREIGN KEY (user_id) REFERENCES public.users(id);

INSERT INTO public.roles (created_at, updated_at, version, name)
VALUES
    (NOW(), NULL, 0, 'ADMIN'),
    (NOW(), NULL, 0, 'CUSTOMER');
