CREATE TABLE public.orders (
  id int8 GENERATED BY DEFAULT AS IDENTITY(
    INCREMENT BY 1 MINVALUE 1 MAXVALUE 9223372036854775807 START 1 CACHE 1 NO CYCLE
  ) NOT NULL,
  created_at timestamptz(6) NOT NULL,
  updated_at timestamptz(6) NULL,
  "version" int8 NULL,
  status varchar(50) NOT NULL,
  total_amount float8 NOT NULL,
  user_id int8 NOT NULL,
  CONSTRAINT orders_pkey PRIMARY KEY (id),
  CONSTRAINT orders_status_check CHECK (
    (
      (status):: text = ANY (
        (
          ARRAY[ 'CREATED' :: character varying,
          'PAYMENT_PENDING' :: character varying,
          'PAID' :: character varying, 'PAYMENT_FAILED' :: character varying,
          'CANCELLED' :: character varying]
        ):: text[]
      )
    )
  )
);

CREATE TABLE public.order_items (
  id int8 GENERATED BY DEFAULT AS IDENTITY(
    INCREMENT BY 1 MINVALUE 1 MAXVALUE 9223372036854775807 START 1 CACHE 1 NO CYCLE
  ) NOT NULL,
  created_at timestamptz(6) NOT NULL,
  updated_at timestamptz(6) NULL,
  "version" int8 NULL,
  line_total float8 NOT NULL,
  product_id int8 NOT NULL,
  quantity int4 NOT NULL,
  unit_price float8 NOT NULL,
  order_id int8 NOT NULL,
  CONSTRAINT order_items_pkey PRIMARY KEY (id)
);

ALTER TABLE
  public.order_items
ADD
  CONSTRAINT fkbioxgbv59vetrxe0ejfubep1w FOREIGN KEY (order_id) REFERENCES public.orders(id);
