---
title: Product & Order Service ERD
---
erDiagram
    USER {
        uuid id PK
        varchar username UK
        varchar password_hash
        varchar email UK
        timestamp created_at
    }
    ROLE {
        int id PK
        varchar name UK
         %% ADMIN,CUSTOMER

    }
    USER_ROLE {
        uuid user_id FK
        int role_id FK
    }
    CATEGORY {
        bigint id PK
        varchar name UK
        varchar slug UK
        timestamp created_at
    }
    PRODUCT {
        bigint id PK
        varchar sku UK
        varchar name
        text description
        bigint category_id FK
        numeric price
        boolean active
        timestamp created_at
    }
    INVENTORY {
        bigint product_id PK,FK
        int quantity
        timestamp updated_at
    }
    "ORDER" {
        bigint id PK
        uuid customer_id FK
        varchar status
        %% CREATED, PAYMENT_PENDING, PAID, PAYMENT_FAILED, FULFILLED, CANCELLED
        numeric subtotal
        numeric tax
        numeric shipping_fee
        numeric total
        varchar currency
        %% e.g., INR
        varchar request_id UK
        timestamp created_at
        timestamp updated_at
    }
    ORDER_ITEM {
        bigint id PK
        bigint order_id FK
        bigint product_id FK
        int quantity
        numeric unit_price
        numeric line_total
    }
    PAYMENT_TRANSACTION {
        bigint id PK
        bigint order_id FK
        varchar provider
        %% SIMULATED
        varchar status
        %% AUTHORIZED, DECLINED
        varchar auth_code
        varchar failure_reason
        timestamp created_at
    }

    USER ||--o{ USER_ROLE : has
    ROLE ||--o{ USER_ROLE : grants
    CATEGORY ||--o{ PRODUCT : contains
    PRODUCT ||--|| INVENTORY : tracks
    USER ||--o{ "ORDER" : places
    "ORDER" ||--o{ ORDER_ITEM : has
    PRODUCT ||--o{ ORDER_ITEM : appears_in
    "ORDER" ||--o{ PAYMENT_TRANSACTION : has
